<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">MF Financeiro</string>
    <string name="title_activity_main">MF Financeiro</string>
    <string name="package_name">br.com.mfinanceiro.app</string>
    <string name="custom_url_scheme">mfinanceiro</string>
    <string name="shortcut_quick_short">Lançar</string>
    <string name="shortcut_quick_long">Novo lançamento no MF</string>
    <string name="shortcut_scan_short">Escanear</string>
    <string name="shortcut_scan_long">Escanear conta no MF</string>
    <string name="shortcut_pulse_short">Pulse</string>
    <string name="shortcut_pulse_long">Ver quanto está livre hoje</string>
    <string name="quick_settings_tile_label">MF Quick</string>
    <string name="quick_settings_tile_subtitle">Novo lançamento</string>
    <string name="quick_settings_tile_description">Abrir o MF Quick para registrar um lançamento</string>
</resources>
